--- a/assets/templates/sections/offers/premiumContent.html
+++ b/assets/templates/sections/offers/premiumContent.html
@@ -6,10 +6,10 @@
         </div>
         <div class="offer__premium__slider__images">
             <div class="offer__premium__slider__images__item" data-image="notebook-mac">
-                <div class="offer__premium__slider__image offer__premium__slider__images__notebook__mac"></div>
+                <div class="offer__premium__slider__image offer__premium__slider__images__notebook__mac progressive-image"></div>
             </div>
             <div class="offer__premium__slider__images__item" data-image="macbook">
-                <div class="offer__premium__slider__image offer__premium__slider__images__macbook"></div>
+                <div class="offer__premium__slider__image offer__premium__slider__images__macbook progressive-image"></div>
             </div>
         </div>
     </div>
@@ -20,10 +20,10 @@
         </div>
         <div class="offer__premium__slider__images">
             <div class="offer__premium__slider__images__item" data-image="iphones">
-                <div class="offer__premium__slider__image offer__premium__slider__images__iphones"></div>
+                <div class="offer__premium__slider__image offer__premium__slider__images__iphones progressive-image"></div>
             </div>
             <div class="offer__premium__slider__images__item" data-image="phone-samsung">
-                <div class="offer__premium__slider__image offer__premium__slider__images__phone__samsung"></div>
+                <div class="offer__premium__slider__image offer__premium__slider__images__phone__samsung progressive-image"></div>
             </div>
         </div>
     </div>
@@ -34,10 +34,10 @@
         </div>
         <div class="offer__premium__slider__images">
             <div class="offer__premium__slider__images__item" data-image="ipad">
-                <div class="offer__premium__slider__image offer__premium__slider__images__ipad"></div>
+                <div class="offer__premium__slider__image offer__premium__slider__images__ipad progressive-image"></div>
             </div>
             <div class="offer__premium__slider__images__item" data-image="iphone">
-                <div class="offer__premium__slider__image offer__premium__slider__images__iphone"></div>
+                <div class="offer__premium__slider__image offer__premium__slider__images__iphone progressive-image"></div>
             </div>
         </div>
     </div>
@@ -48,10 +48,10 @@
         </div>
         <div class="offer__premium__slider__images">
             <div class="offer__premium__slider__images__item" data-image="macbook">
-                <div class="offer__premium__slider__image offer__premium__slider__images__macbook"></div>
+                <div class="offer__premium__slider__image offer__premium__slider__images__macbook progressive-image"></div>
             </div>
             <div class="offer__premium__slider__images__item" data-image="iphone">
-                <div class="offer__premium__slider__image offer__premium__slider__images__iphone"></div>
+                <div class="offer__premium__slider__image offer__premium__slider__images__iphone progressive-image"></div>
             </div>
         </div>
     </div>
@@ -62,10 +62,10 @@
         </div>
         <div class="offer__premium__slider__images">
             <div class="offer__premium__slider__images__item" data-image="devices">
-                <div class="offer__premium__slider__image offer__premium__slider__images__devices"></div>
+                <div class="offer__premium__slider__image offer__premium__slider__images__devices progressive-image"></div>
             </div>
             <div class="offer__premium__slider__images__item" data-image="iphone">
-                <div class="offer__premium__slider__image offer__premium__slider__images__iphone"></div>
+                <div class="offer__premium__slider__image offer__premium__slider__images__iphone progressive-image"></div>
             </div>
         </div>
     </div>
@@ -76,10 +76,10 @@
         </div>
         <div class="offer__premium__slider__images">
             <div class="offer__premium__slider__images__item" data-image="ipad">
-                <div class="offer__premium__slider__image offer__premium__slider__images__ipad"></div>
+                <div class="offer__premium__slider__image offer__premium__slider__images__ipad progressive-image"></div>
             </div>
             <div class="offer__premium__slider__images__item" data-image="phone-samsung">
-                <div class="offer__premium__slider__image offer__premium__slider__images__phone__samsung"></div>
+                <div class="offer__premium__slider__image offer__premium__slider__images__phone__samsung progressive-image"></div>
             </div>
         </div>
     </div>
@@ -90,7 +90,7 @@
         </div>
         <div class="offer__premium__slider__images">
             <div class="offer__premium__slider__images__item" data-image="iphones">
-                <div class="offer__premium__slider__image offer__premium__slider__images__iphones">
+                <div class="offer__premium__slider__image offer__premium__slider__images__iphones progressive-image">
                     <div class="offer__premium__slider__likes__cover">
                         <div class="offer__premium__slider__likes__cover__photo" style="background-image:url('/preview/images/photo/photo_phone.jpg')"></div>
                         <div class="offer__premium__slider__likes__cover__badge">21</div>
@@ -106,29 +106,29 @@
         </div>
         <div class="offer__premium__slider__images">
             <div class="offer__premium__slider__images__item" data-image="imac">
-                <div class="offer__premium__slider__image offer__premium__slider__images__imac"></div>
+                <div class="offer__premium__slider__image offer__premium__slider__images__imac progressive-image"></div>
             </div>
             <div class="offer__premium__slider__images__item" data-image="macbook">
-                <div class="offer__premium__slider__image offer__premium__slider__images__macbook"></div>
+                <div class="offer__premium__slider__image offer__premium__slider__images__macbook progressive-image"></div>
             </div>
             <div class="offer__premium__slider__images__item" data-image="iphone">
-                <div class="offer__premium__slider__image offer__premium__slider__images__iphone"></div>
+                <div class="offer__premium__slider__image offer__premium__slider__images__iphone progressive-image"></div>
             </div>
         </div>
     </div>
 
     <div class="offer__premium__slider__item { showAnim : finish }" data-active={ finish } data-slide="finish">
-        <div name="finishSlideAnim" class="offer__premium__slider__text" data-finish="true">
+        <div name="finishSlideAnim" ref="finishSlideAnim" class="offer__premium__slider__text" data-finish="true">
             <div class="offer__premium__slider__text__title">
 
-                <div if={ opts.site }>Мне <span class="larger">не нужна</span> презентация</div>
+                <div if={ opts.site }>Создайте <span class="larger">продающее</span> резюме</div>
                 <div if={ opts.site }>
-                    <div class="offer__premium__slider__text__subtitle">Хочу пощупать продукт</div>
-                    <a href="/premium/workflow/" class="btn btn-xl mt-m text-uppercase">Перейти на тест-драйв</a>
+                    <div class="offer__premium__slider__text__subtitle">Узнайте больше и получите работу своей мечты</div>
+                    <a href="/premium/" class="btn btn-xl btn-upper mt-m">Узнать больше о продукте</a>
                 </div>
 
                 <div if={ !opts.site }>Получите <span class="larger">престижную</span> работу</div>
-                <div if={ !opts.site } onClick={ onSuccess } onUpdate="none" class="btn btn-xl mt-m">Перейти на Premium</div>
+                <div if={ !opts.site } onClick={ onSuccess } onUpdate="none" class="btn btn-xl btn-upper mt-m">Перейти на Premium</div>
 
                 <div onClick={ onRepeat } class="offer__premium__slider__repeat">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
@@ -139,10 +139,10 @@
         </div>
         <div class="offer__premium__slider__images">
             <div class="offer__premium__slider__images__item" data-image="macbook-left">
-                <div class="offer__premium__slider__image offer__premium__slider__images__macbook__left"></div>
+                <div class="offer__premium__slider__image offer__premium__slider__images__macbook__left progressive-image"></div>
             </div>
             <div class="offer__premium__slider__images__item" data-image="macbook-right">
-                <div class="offer__premium__slider__image offer__premium__slider__images__macbook__right"></div>
+                <div class="offer__premium__slider__image offer__premium__slider__images__macbook__right progressive-image"></div>
             </div>
         </div>
         <div class="row premium-devices-icons">
@@ -182,19 +182,23 @@
     $.slides = _.range(8);
 
     $.on("mount", function(){
+        $.finishSlideAnim = $.refs ? $.refs.finishSlideAnim : $.finishSlideAnim;
+
         $.progress = $.el.find(".offer__premium__slider__progress__white");
         $.pigination = $.el.find(".offer__premium__slider__pigination");
+
         if ($.opts.site){
+            var imagesLoaded = new app.plugins.imagesLoaded();
+
+            imagesLoaded.load({
+                timeout: 2000
+            });
+
             $afterlag.run(function(){
                 $.update({
                     slide: 1
                 })
-                $afterlag.run(function(){
-                    app.$dom.body.removeClass("appLoading");
-                    $.onSlide();
-                }, {
-                    iterations: 3
-                })
+                $.onSlide();
             });
         }
     });
