--- a/assets/templates/sections/plan/plan.html
+++ b/assets/templates/sections/plan/plan.html
@@ -47,7 +47,7 @@
                                     </tr>
                                     <tr class="table-row">
                                         <td class="table-cell">
-                                            <div class="pos-rel" data-balloon="Удобная статистика по дням, посещения вашего резюме" data-balloon-length="large" data-balloon-fontSize="medium">Статистика</div>
+                                            <div class="pos-rel" data-balloon="Оценивайте эффективность ваших резюме, подробная статистика по дням" data-balloon-length="large" data-balloon-fontSize="medium">Статистика</div>
                                         </td>
                                         <td class="table-cell text-center pt-xxs">
                                             <div class="display-inlineBlock w25 h1px bg-gray mb-xxs"></div>
