--- a/views/index.html
+++ b/views/index.html
@@ -23,6 +23,8 @@
 	<meta name="google" content="notranslate" />
     <link rel="manifest" href="/manifest.json">
     <link id="styles" rel="stylesheet" href="/public/css/style.css">
+    <!-- <link media="screen and (max-width:1440px)" id="styles" rel="stylesheet" href="/public/css/style.css">
+    <link media="screen and (min-width:1441px)" id="styles" rel="stylesheet" href="/public/css/style.largeScreen.css"> -->
 </head>
 <body id="renderSide">
 
@@ -38,16 +40,18 @@
     <!--/ templates /-->
     <!-- <script src="/public/templates/commons/modules/auth/auth.tag" type="riot/tag"></script> -->
     <script src="/public/js/templates.js"></script>
+    <script src="/public/templates/commons/modules/auth/auth.tag" type="riot/tag"></script>
 
     <!--/ JS components /-->
     <script src="/public/js/app.js"></script>
+    <script src="/assets/js/plugins/scroll/scroll.Parallax.js"></script>
+    <script src="/assets/js/plugins/styles.js"></script>
     <script src="/assets/js/plugins/eventsEmitter.js"></script>
     <script src="/public/js/sections/home.js"></script>
     <script src="/public/js/sections/premium.js"></script>
     <script src="/public/js/sections/blog.js"></script>
     <script src="/assets/js/components/features/premium.js"></script>
     <script src="/public/js/init.js"></script>
-    <!-- <script src="https://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU"></script> -->
 
 </body>
 </html>
