--- a/views/premiumSlider.html
+++ b/views/premiumSlider.html
@@ -24,32 +24,15 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="/public/css/style.css">
 </head>
-<body class="appLoading">
+<body id="renderSide">
 
     <offer-premium-content></offer-premium-content>
 
-    <div id="loader">
-        <div class="loader-spinner"></div>
-    </div>
-
     <!--/ VENDORS /-->
-    <script src="/assets/js/libs/jquery.min.js"></script>
-    <script src="/assets/js/libs/modernizr.custom.js"></script>
-    <script src="/assets/js/libs/underscore-min.js"></script>
-    <script src="/assets/js/libs/riot/riot+compiler.update.js"></script>
-    <script src="/assets/js/libs/afterlag-js/dist/afterlag.min.js"></script>
-    <script src="/assets/js/libs/url.min.js"></script>
-    <script src="/assets/js/components/commons/app.js"></script>
-    <script src="/assets/js/components/commons/common.js"></script>
-    <script src="/assets/js/components/commons/modules.js"></script>
-    <script src="/assets/js/components/commons/utils.js"></script>
-    <script src="/assets/js/components/commons/afterlag.js"></script>
+    <script src="/public/js/app.promo.build.js"></script>
 
     <!--/ templates /-->
-    <script src="/assets/templates/sections/offers/premiumContent.html" type="riot/tag"></script>
-    <script src="/assets/templates/ui/icons/icon-device-desktop.html" type="riot/tag"></script>
-    <script src="/assets/templates/ui/icons/icon-device-tablet.html" type="riot/tag"></script>
-    <script src="/assets/templates/ui/icons/icon-device-phones.html" type="riot/tag"></script>
+    <!-- <script src="/assets/templates/sections/offers/premiumContent.html" type="riot/tag"></script> -->
 
     <script>
         riot.compile(function(e){
