--- a/views/private.html
+++ b/views/private.html
@@ -52,6 +52,8 @@
     <script src="/assets/templates/sections/stat/resumeStat.html" type="riot/tag"></script>
     <script src="/assets/templates/sections/overview/premium/overviewPremiumColor.tag" type="riot/tag"></script>
     <script src="/assets/templates/sections/stat/mobile/resumeStat.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/list/resumeSelect.html" type="riot/tag"></script>
+
 
     <script src="/assets/js/commons.js"></script>
     <script src="/assets/js/plugins.js"></script>
