--- a/assets/css/sections/list/_resumeSelect.scss
+++ b/assets/css/sections/list/_resumeSelect.scss
@@ -182,12 +182,12 @@
             @extend .cursor-pointer;
             @extend .willChange-tp;
             box-shadow:5px 8.66px 30px 0 rgba(31,35,37,.078);
-            transform:translate3d(-77px, 0, 0) scale(0);
+            transform:translate3d(-77px, -10px, 0) scale(0);
             transition:all 0.4s;
 
             .slider__item.current & {
                 @extend .opacity-100;
-                transform:translate3d(-77px, 0, 0) scale(1);
+                transform:translate3d(-77px, -10px, 0) scale(1);
             }
             &__pointer {
                 @extend .pos-centered;
@@ -212,6 +212,18 @@
                         @include ui-icon(plus_thin_white);
                     }
                 }
+            }
+        }
+        &__link__overview {
+            @extend .display-inlineFlex;
+            @extend .c-blueBright;
+            @extend .btn-active;
+            @extend .lineHeight-l;
+            border-bottom:1px solid rgba($blueBright,.3);
+
+            &:hover {
+                @extend .c-pink;
+                border-color:rgba($pink,.3);
             }
         }
         &__item {
@@ -277,16 +289,16 @@
                 @extend .pos-bl;
                 @extend .w100p;
                 @extend .text-center;
-                @extend .pb-xl;
                 @extend .opacity-0;
                 @extend .willChange-tp;
+                padding-bottom:110px;
                 transform:translate3d(0, 80px, 0) scale(0.9);
                 transition:opacity 0.4s, transform 0.4s;
 
                 .slider__item.current & {
                     @extend .opacity-100;
                     @extend .transform-default;
-                    transition:opacity 0.4s, transform 0.4s;
+                    transition:opacity 0.5s 0.1s, transform 0.5s 0.1s;
                 }
                 .d-phone & {
                     @extend .pos-centered-v;
@@ -300,12 +312,24 @@
             }
         }
         &__colors__item {
+            @include accelerate(true);
             @extend .display-inlineBlock;
             @extend .w40;
             @extend .h40;
             @extend .borderRadius-circle;
             @extend .mr-xs;
             @extend .cursor-default;
+            will-change:transform, box-shadow;
+            transition:transform 0.35s $cubic40, box-shadow 0.35s $cubic40;
+
+            &:hover {
+                @extend .trY--xs;
+            }
+            @each $title, $color in (blue: $blue, blueLight: $blueLight, brown: $brown, red: $red, pink: $pink, orange: $orange, violet: $violet, violetLight: $violetLight, green: $green, emerald: $emerald){
+                &.bg-#{$title}:hover {
+                    box-shadow:0 22px 40px -10px rgba($color,.48), 0 14px 30px 0px rgba($color,.2), 0 7px 20px -5px rgba($color,.3);
+                }
+            }
         }
         &__icon {
             @extend .pos-rel;
@@ -316,16 +340,15 @@
                 margin-right:16px;
             }
             &[data-icon="control"]{
-                margin-right:7px;
+                margin-right:8px;
             }
             &[data-icon="play"]{
-                margin-right:22px;
+                margin-right:20px;
             }
-            &[data-icon="chart"]{
-                margin-right:30px;
-            }
+            &[data-icon="chart"],
+            &[data-icon="feedback"],
             &[data-icon="devices"]{
-                margin-right:30px;
+                margin-right:33px;
             }
         }
     }
